[package]
name = "premium-display"
version = "0.1.0"
edition = "2024"
authors = ["Lukas Joeressen"]
description = "Device drivers for different displays"
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://github.com/kext/premium"
categories = ["no-std", "embedded", "graphics"]

[dependencies]
premium-pixel = { path = "../premium-pixel", version = "0.1" }

embedded-hal-async = "1"
