[package]
name = "premium-line"
version = "0.1.0"
edition = "2024"
authors = ["Lukas Joeressen"]
description = "A fixed capacity String suitable for stack allocation and devices without allocator"
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://github.com/kext/premium"
categories = ["no-std", "embedded"]
keywords = ["line", "string", "format"]

[dependencies]
